--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -10,28 +10,28 @@
 #### MODULES ####
 #################
 
-module(load="imuxsock") # provides support for local system logging
+#module(load="imuxsock") # provides support for local system logging
 #module(load="immark")  # provides --MARK-- message capability
 
 # provides UDP syslog reception
 module(load="imudp")
-input(type="imudp" port="514")
+input(type="imudp" port="5142")
 
 # provides TCP syslog reception
 module(load="imtcp")
-input(type="imtcp" port="514")
+input(type="imtcp" port="5142")
 
 # provides kernel logging support and enable non-kernel klog messages
-module(load="imklog" permitnonkernelfacility="on")
+#module(load="imklog" permitnonkernelfacility="on")
 
-$template RemInputLogs, "/var/log/remotelogs/%FROMHOST-IP%/%PROGRAMNAME%.log"
+$template RemInputLogs, "/sentinel/rsyslog/remotelogs/%FROMHOST-IP%/%PROGRAMNAME%.log"
 *.* ?RemInputLogs
 
 ###########################
 #### GLOBAL DIRECTIVES ####
 ###########################
-$AllowedSender UDP, 192.168.1.0/24, 172.22.250.0/20
-$AllowedSender TCP, 192.168.1.0/24, 172.22.250.0/20
+$AllowedSender UDP, 192.168.1.0/24, 172.0.0.0/8
+$AllowedSender TCP, 192.168.1.0/24, 172.0.0.0/8
 #
 # Use traditional timestamp format.
 # To enable high precision timestamps, comment out the following line.
@@ -44,18 +44,18 @@ $RepeatedMsgReduction on
 #
 # Set the default permissions for all log files.
 #
-$FileOwner syslog
+$FileOwner sentinel
 $FileGroup adm
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
-$PrivDropToUser syslog
-$PrivDropToGroup syslog
+#$PrivDropToUser syslog
+#$PrivDropToGroup syslog
 
 #
 # Where to place spool and state files
 #
-$WorkDirectory /var/spool/rsyslog
+$WorkDirectory /sentinel/rsyslog
 
 #
 # Include all config files in /etc/rsyslog.d/
