--- a/fluentd.conf
+++ b/fluentd.conf
@@ -40,6 +40,22 @@
   </parse>
 </filter>
 
+<filter firewall.logs.**>
+    @type geoip
+    geoip_lookup_keys SourceIP
+    backend_library geoip2_c
+  <record>
+    city            ${city.names.en["SourceIP"]}
+    latitude        ${location.latitude["SourceIP"]}
+    longitude       ${location.longitude["SourceIP"]}
+    country         ${country.iso_code["SourceIP"]}
+    country_name    ${country.names.en["SourceIP"]}
+    postal_code     ${postal.code["SourceIP"]}
+    region_code     ${subdivisions.0.iso_code["SourceIP"]}
+    region_name     ${subdivisions.0.names.en["SourceIP"]}
+  </record>
+   skip_adding_null_record true
+  </filter>
 <match firewall.**>
     @type azure-loganalytics
     customer_id WORKSPACE_ID  # Customer ID aka WorkspaceID String
