added nginx parsing

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -8,28 +8,48 @@
   @type grep
   <regexp>
     key ident
-    pattern /^kernel$/
+    pattern /^(kernel|nginx|nginxerror)$/
   </regexp>
 </filter>
 
 <match syslog.**>
 	@type rewrite_tag_filter
+  <rule>
+    key ident
+    pattern /^nginxerror$/
+    tag nginx.logs.error
+  </rule>
+  <rule>
+    key ident
+    pattern /^nginx$/
+    tag nginx.logs.access
+  </rule>
 	<rule>
-            key message
-            pattern /^.*(IN|OUT).*TCP.*$/
-            tag firewall.logs.tcp
-        </rule>
+      key message
+      pattern /^.*(IN|OUT).*TCP.*$/
+      tag firewall.logs.tcp
+  </rule>
 	<rule>
 	    key message
-            pattern /^.*(IN|OUT).*UDP.*$/
-            tag firewall.logs.udp
-        </rule>
-        <rule>
-            key message
-            pattern /^.*(IN|OUT).*ICMP.*$/
-            tag firewall.logs.icmp
-        </rule>
+      pattern /^.*(IN|OUT).*UDP.*$/
+      tag firewall.logs.udp
+    </rule>
+    <rule>
+        key message
+        pattern /^.*(IN|OUT).*ICMP.*$/
+        tag firewall.logs.icmp
+    </rule>
 </match>
+
+<filter nginx.logs.access>
+  @type parser
+  key_name message
+  <parse>
+    @type nginx
+    expression /^(?<remote>[^ ]*) (?<host>[^ ]*) (?<user>[^ ]*) \[(?<time>[^\]]*)\] "(?<method>\S+)(?: +(?<path>[^\"]*?)(?: +\S*)?)?" (?<code>[^ ]*) (?<size>[^ ]*)(?: "(?<referer>[^\"]*)" "(?<agent>[^\"]*)"(?:\s+(?<http_x_forwarded_for>[^ ]+))?)?$/
+    time_format %d/%b/%Y:%H:%M:%S %z
+  </parse>
+</filter>
 
 <filter firewall.**>
   @type parser
@@ -55,12 +75,42 @@
     region_name     ${subdivisions.0.names.en["SourceIP"]}
   </record>
    skip_adding_null_record true
-  </filter>
+</filter>
+
+<filter nginx.logs.access>
+    @type geoip
+    geoip_lookup_keys remote
+    backend_library geoip2_c
+  <record>
+    city            ${city.names.en["remote"]}
+    latitude        ${location.latitude["remote"]}
+    longitude       ${location.longitude["remote"]}
+    country         ${country.iso_code["remote"]}
+    country_name    ${country.names.en["remote"]}
+    postal_code     ${postal.code["remote"]}
+    region_code     ${subdivisions.0.iso_code["remote"]}
+    region_name     ${subdivisions.0.names.en["remote"]}
+  </record>
+   skip_adding_null_record true
+</filter>
+
 <match firewall.**>
     @type azure-loganalytics
-    customer_id WORKSPACE_ID  # Customer ID aka WorkspaceID String
+    customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
     shared_key KEY     # The primary or the secondary Connected Sources client authentication key
     log_type UnifiFirewallLogs  # The name of the event type. ex) ApacheAccessLog
+    add_time_field true
+    time_format %FT%T%z
+    localtime true
+    add_tag_field true
+    tag_field_name tag
+</match>
+
+<match nginx.logs.access>
+    @type azure-loganalytics
+    customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
+    shared_key KEY     # The primary or the secondary Connected Sources client authentication key
+    log_type NginxAccess  # The name of the event type. ex) ApacheAccessLog
     add_time_field true
     time_format %FT%T%z
     localtime true
