--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -24,7 +24,7 @@ input(type="imtcp" port="5142")
 # provides kernel logging support and enable non-kernel klog messages
 #module(load="imklog" permitnonkernelfacility="on")
 
-$template RemInputLogs, "/sentinel/rsyslog/remotelogs/%FROMHOST-IP%/%PROGRAMNAME%.log"
+$template RemInputLogs, "/sentinel/rsyslog/remotelogs/%HOSTNAME%/%PROGRAMNAME%.log"
 *.* ?RemInputLogs
 
 ###########################
