--- a/fluentd.conf
+++ b/fluentd.conf
@@ -8,12 +8,17 @@
   @type grep
   <regexp>
     key ident
-    pattern /^(kernel|nginx|nginxerror)$/
+    pattern /^(pihole|kernel|nginx|nginxerror)$/
   </regexp>
 </filter>
 
 <match syslog.**>
 	@type rewrite_tag_filter
+  <rule>
+    key ident
+    pattern /^pihole$/
+    tag pihole.logs.query
+  </rule>
   <rule>
     key ident
     pattern /^nginxerror$/
@@ -35,6 +40,15 @@
       tag firewall.logs.udp
     </rule>
 </match>
+
+<filter pihole.logs.query>
+  @type parser
+  key_name message
+  <parse>
+    @type regexp
+    expression /^query\[(\w){1,5}\] (?<domain>[\w\.].+) from (?<client>[\d\.].+)$/i
+  </parse>
+</filter>
 
 <filter nginx.logs.access>
   @type parser
@@ -106,6 +120,18 @@
     customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
     shared_key KEY     # The primary or the secondary Connected Sources client authentication key
     log_type NginxAccess  # The name of the event type. ex) ApacheAccessLog
+    add_time_field true
+    time_format %FT%T%z
+    localtime true
+    add_tag_field true
+    tag_field_name tag
+</match>
+
+<match pihole.logs.query>
+    @type azure-loganalytics
+    customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
+    shared_key KEY     # The primary or the secondary Connected Sources client authentication key
+    log_type PiHole  # The name of the event type. ex) ApacheAccessLog
     add_time_field true
     time_format %FT%T%z
     localtime true
