improved pihole filter

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -15,8 +15,8 @@
 <match syslog.**>
 	@type rewrite_tag_filter
   <rule>
-    key ident
-    pattern /^pihole$/
+    key message
+    pattern /dnsmasq/
     tag pihole.logs.query
   </rule>
   <rule>
@@ -46,7 +46,7 @@
   key_name message
   <parse>
     @type regexp
-    expression /^query\[(\w){1,5}\] (?<domain>[\w\.].+) from (?<client>[\d\.].+)$/i
+    expression /query\[(\w){1,5}\] (?<domain>[\w\.].+) from (?<client>[\d\.].+)$/i
   </parse>
 </filter>
 
