improved pihole filter

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -16,7 +16,7 @@
 	@type rewrite_tag_filter
   <rule>
     key message
-    pattern /dnsmasq/
+    pattern /dnsmasq.*query.*$/
     tag pihole.logs.query
   </rule>
   <rule>
