fixed non-matching for some queries

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -46,7 +46,7 @@
   key_name message
   <parse>
     @type regexp
-    expression /query\[(\w){1,5}\] (?<domain>[\w\.].+) from (?<client>[\d\.].+)$/i
+    expression /query\[.+\] (?<domain>[\w\.].+) from (?<client>[\d\.].+)$/i
   </parse>
 </filter>
 
