added sudo logging

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -8,12 +8,17 @@
   @type grep
   <regexp>
     key ident
-    pattern /^(pihole|kernel|nginx|nginxerror)$/
+    pattern /^(pihole|kernel|nginx|nginxerror|sudo)$/
   </regexp>
 </filter>
 
 <match syslog.**>
 	@type rewrite_tag_filter
+  <rule>
+    key message
+    pattern /sudo.*COMMAND/
+    tag syslog.sudo
+  </rule>
   <rule>
     key message
     pattern /dnsmasq.*query.*$/
@@ -40,6 +45,15 @@
       tag firewall.logs.udp
     </rule>
 </match>
+
+<filter syslog.sudo>
+  @type parser
+  key_name message
+  <parse>
+    @type regexp
+    expression /PWD=(?<working_directory>[^ ]+) ; USER=(?<sudoer>[^ ]+) ; COMMAND=(?<command>.*)$/
+  </parse>
+</filter>
 
 <filter pihole.logs.query>
   @type parser
@@ -132,6 +146,18 @@
     customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
     shared_key KEY     # The primary or the secondary Connected Sources client authentication key
     log_type PiHole  # The name of the event type. ex) ApacheAccessLog
+    add_time_field true
+    time_format %FT%T%z
+    localtime true
+    add_tag_field true
+    tag_field_name tag
+</match>
+
+<match syslog.sudo>
+    @type azure-loganalytics
+    customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
+    shared_key KEY     # The primary or the secondary Connected Sources client authentication key
+    log_type SyslogSudo  # The name of the event type. ex) ApacheAccessLog
     add_time_field true
     time_format %FT%T%z
     localtime true
