update firewall with blocked ips

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -16,7 +16,7 @@
 	@type rewrite_tag_filter
   <rule>
     key message
-    pattern /sudo.*COMMAND/
+    pattern /COMMAND/
     tag syslog.sudo
   </rule>
   <rule>
