--- a/usg-scripts/.vscode/settings.json
+++ b/usg-scripts/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/bin/python3",
+    "python.linting.pylintEnabled": false,
+    "python.linting.banditEnabled": true,
+    "python.linting.enabled": true,
+    "python.formatting.provider": "black"
 }
