--- a/usg-scripts/Dockerfile
+++ b/usg-scripts/Dockerfile
@@ -3,6 +3,10 @@ ENV UNIFI_USERNAME=dummy
 ENV UNIFI_PASSWORD=dummypass
 ENV UNIFI_CONTROLLER=127.0.0.1
 ENV AZURE_STORAGE_CONNECTION_STRING=dummyconnection
+# Keeps Python from generating .pyc files in the container
+ENV PYTHONDONTWRITEBYTECODE=1
+# Turns off buffering for easier container logging
+ENV PYTHONUNBUFFERED=1
 RUN useradd --no-create-home --shell /bin/bash threatupdater 
 WORKDIR /threatupdater
 ADD requirements.txt .
