adding data about which alert triggered the ip block

--- a/rsyslog.conf
+++ b/rsyslog.conf
@@ -32,8 +32,8 @@ $template RemInputLogs, "/sentinel/rsyslog/remotelogs/%HOSTNAME%/%PROGRAMNAME%.l
 ###########################
 *.* @127.0.0.1:5140
 
-$AllowedSender UDP, 192.168.1.0/24, 172.0.0.0/8
-$AllowedSender TCP, 192.168.1.0/24, 172.0.0.0/8
+#$AllowedSender UDP, 192.168.1.0/24, 172.0.0.0/8
+#$AllowedSender TCP, 192.168.1.0/24, 172.0.0.0/8
 #
 # Use traditional timestamp format.
 # To enable high precision timestamps, comment out the following line.
