fix matching on sudo messages

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -16,12 +16,12 @@
 	@type rewrite_tag_filter
   <rule>
     key message
-    pattern /COMMAND/
+    pattern /^.*COMMAND.*$/
     tag syslog.sudo
   </rule>
   <rule>
     key message
-    pattern /dnsmasq.*query.*$/
+    pattern /^.*dnsmasq.*query.*$/
     tag pihole.logs.query
   </rule>
   <rule>
