fixed sudo not being processed

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -17,7 +17,7 @@
   <rule>
     key message
     pattern /^.*COMMAND.*$/
-    tag syslog.sudo
+    tag auth.sudo
   </rule>
   <rule>
     key message
@@ -46,7 +46,7 @@
     </rule>
 </match>
 
-<filter syslog.sudo>
+<filter auth.sudo>
   @type parser
   key_name message
   <parse>
@@ -153,7 +153,7 @@
     tag_field_name tag
 </match>
 
-<match syslog.sudo>
+<match auth.sudo>
     @type azure-loganalytics
     customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
     shared_key KEY     # The primary or the secondary Connected Sources client authentication key
