added suricata log

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -8,12 +8,17 @@
   @type grep
   <regexp>
     key ident
-    pattern /^(pihole|kernel|nginx|nginxerror|sudo)$/
+    pattern /^(pihole|kernel|nginx|nginxerror|sudo|suricata)$/
   </regexp>
 </filter>
 
 <match syslog.**>
 	@type rewrite_tag_filter
+  <rule>
+    key message
+    pattern /^.*event_type.*alert.*$/
+    tag suricata.alert
+  </rule>
   <rule>
     key message
     pattern /^.*COMMAND.*$/
@@ -45,6 +50,17 @@
       tag firewall.logs.udp
     </rule>
 </match>
+
+<filter suricata.alert>
+  @type parser
+  key_name message
+  <parser>
+    @type json
+    time_type string
+    time_key time_stamp
+    time_format %FT%T%z
+  </parser>
+</filter>
 
 <filter auth.sudo>
   @type parser
@@ -158,6 +174,18 @@
     customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
     shared_key KEY     # The primary or the secondary Connected Sources client authentication key
     log_type SyslogSudo  # The name of the event type. ex) ApacheAccessLog
+    add_time_field true
+    time_format %FT%T%z
+    localtime true
+    add_tag_field true
+    tag_field_name tag
+</match>
+
+<match suricata.alert>
+    @type azure-loganalytics
+    customer_id WORKSPACE_ID # Customer ID aka WorkspaceID String
+    shared_key KEY     # The primary or the secondary Connected Sources client authentication key
+    log_type SuricataAlert  # The name of the event type. ex) ApacheAccessLog
     add_time_field true
     time_format %FT%T%z
     localtime true
