correct tag might help

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -54,12 +54,12 @@
 <filter suricata.alert>
   @type parser
   key_name message
-  <parser>
+  <parse>
     @type json
     time_type string
     time_key time_stamp
     time_format %FT%T%z
-  </parser>
+  </parse>
 </filter>
 
 <filter auth.sudo>
